textarea jump fixed

--- a/style.css
+++ b/style.css
@@ -79,7 +79,8 @@ textarea {
 }
 
 input[type="text"],
-input[type="text"] {
+input[type="text"],
+textarea {
   border: 2px transparent solid;
 }
 
@@ -121,8 +122,7 @@ header {
   width: 80%;
   /* max-width: 1000px; */
   height: auto;
-  box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 2px 2px rgb(0 0 0 / 6%),
-    0 0 2px rgb(0 0 0 / 7%);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 2px 2px rgb(0 0 0 / 6%), 0 0 2px rgb(0 0 0 / 7%);
   border: 2px solid var(--color-primary);
   border-radius: 50px;
   padding: 10px;
@@ -188,28 +188,27 @@ header {
 
 /* BOX */
 
-.box-images{
+.box-images {
   position: relative;
   top: 0;
   left: 0;
 }
 
 .box-a img,
-.box-text
-{
+.box-text {
   max-width: 500px;
   margin: 0 auto;
   justify-self: center;
   /* padding: 20px 0; */
 }
 
-.box-a img{
+.box-a img {
   position: relative;
   top: 0;
   left: 0;
 }
 
-#animated_text{
+#animated_text {
   position: absolute;
   left: 0px;
   top: 0;
@@ -448,8 +447,7 @@ footer .grid-col-3 * {
   text-align: center;
   text-decoration: none;
   background-color: var(--color-primary);
-  box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 2px 2px rgb(0 0 0 / 6%),
-    0 0 2px rgb(0 0 0 / 7%);
+  box-shadow: 0 1px 3px rgb(0 0 0 / 10%), 0 2px 2px rgb(0 0 0 / 6%), 0 0 2px rgb(0 0 0 / 7%);
 }
 
 .btn:hover {
@@ -571,8 +569,7 @@ span:first-of-type {
   width: 90%;
   height: 100%;
   padding: 30px;
-  box-shadow: inset 0 4px 3px -3px rgb(0 0 0 / 10%),
-    inset 0 4px 2px -2px rgb(0 0 0 / 7%);
+  box-shadow: inset 0 4px 3px -3px rgb(0 0 0 / 10%), inset 0 4px 2px -2px rgb(0 0 0 / 7%);
   transition: all 0.6s;
   z-index: 10;
 }
@@ -595,7 +592,7 @@ span:first-of-type {
 
 .hidden {
   transform: translateX(100%);
-opacity: 0;
+  opacity: 0;
   transition: all 0s;
 }
 
